<resources>
    <string name="app_name">FiapApp</string>
    <string name="cadastro_aut">Cadastro Automóvel</string>
    <string name="cadastro">Cadastro</string>
    <string name="consulta_aut">Consulta Automóvel</string>
    <string name="consulta">Consulta</string>
    <string name="alteracao_aut">Alteração Automóvel</string>
    <string name="alteracao">Alteração</string>
    <string name="filtro">Filtro</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="marca">Marca:</string>
    <string name="modelo">Modelo:</string>
    <string name="ano">Ano:</string>
    <string name="km">Kilometragem:</string>
    <string name="cor">Cor:</string>
    <string name="filial">Filial:</string>
    <string name="valor">Valor:</string>
    <string name="placa">Placa:</string>
    <string name="detalhes">Detalhes:</string>
    <string name="de">De:</string>
    <string name="ate">Até:</string>
    <string name="nome_sistema">Nome do Sistema</string>
    <string name="nome_empresa">Confiance Veículos</string>
    <string name="usuario_nao_cadastrado">Não possui uma conta? Crie aqui!</string>
    <string name="fazer_login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="nome_usuario">Nome Completo</string>
    <string name="cadastrar_usuario">Cadastrar</string>
    <string name="firestore_marca_veiculo">marca_veiculo</string>
    <string name="consulta_veiculo">Consulta de Automóveis</string>
    <string name="consultar">Consultar</string>
    <string name="aplicarFiltro">Aplicar Filtro</string>
    <string name="acao">Ação:</string>
    <string name="usuario">user_fiap@fiap.com.br</string>
    <string name="senhausuario">fiap123</string>
    <string name="menu">Menu</string>

    <string-array name="marcas">
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Citroen</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jeep</item>
        <item>Mercedes-Benz</item>
        <item>Mitsubishi</item>
        <item>Nissan</item>
        <item>Peugeot</item>
        <item>Renaut</item>
        <item>Toyota</item>
        <item>Volkswagen</item>
    </string-array>
</resources>