<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintlayout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/defaultGrey"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:background="@color/defaultGrey"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

        <TextView
            android:id="@+id/txvConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/consulta"
            android:textColor="@color/defaultRed"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
            app:layout_constraintEnd_toEndOf="@+id/toolbar3"
            app:layout_constraintStart_toStartOf="@+id/toolbar3"
            app:layout_constraintTop_toBottomOf="@+id/toolbar2"
            app:layout_constraintVertical_bias="0.488" />

        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="49dp"
            android:layout_height="38dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/menuicon"
            app:layout_constraintStart_toStartOf="@+id/toolbar2"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/menu" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/imageprofile"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnFiltrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#F44336"
            android:text="@string/filtro"
            app:iconTint="#F44336"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar3" />

        <TableLayout
            android:id="@+id/TableConsulta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFiltrar"> <!-- stretch the second column of the layout-->

            <!-- Primeira Linha (Cabeçalho)-->
            <TableRow

                android:id="@+id/firstRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblModelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:text="@string/modelo"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:text="@string/ano"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblFilial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:text="@string/filial"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblValor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:text="@string/valor"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAcaoEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:paddingStart="0dip"
                    android:paddingEnd="0dip"
                    android:text="@string/acao"
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblAcaoDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightGrey"
                    android:padding="14dip"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </TableRow>

            <!-- Espaço em branco entre linhas -->
            <View
                android:id="@+id/emptyView"
                android:layout_height="2dip"
                android:background="@color/offWhite" />

        </TableLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="450dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/defaultRed"
            android:indeterminateTintMode="src_atop"
            android:max="100"
            android:progress="99"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>