<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Registro">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:background="@color/defaultGrey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/nome_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/toolbar6"
        app:layout_constraintStart_toStartOf="@+id/toolbar6"
        app:layout_constraintTop_toBottomOf="@+id/btnFoto" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="@+id/editNome"
        app:layout_constraintTop_toBottomOf="@+id/editNome" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editEmail"
        app:layout_constraintStart_toStartOf="@+id/editEmail"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cadastrar_usuario"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editSenha"
        app:layout_constraintStart_toStartOf="@+id/editSenha"
        app:layout_constraintTop_toBottomOf="@+id/editSenha" />

    <Button
        android:id="@+id/btnFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="36dp"
        android:textStyle="bold"
        android:text="Foto"
        android:background="@drawable/bg_image_circulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iVFoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnFoto"
        app:layout_constraintEnd_toEndOf="@+id/btnFoto"
        app:layout_constraintStart_toStartOf="@+id/btnFoto"
        app:layout_constraintTop_toTopOf="@+id/btnFoto" />

</androidx.constraintlayout.widget.ConstraintLayout>